# robot_sim

./: .gitignore  .gitmodules  PROJECT_SUMMARY.md  README.md  pyproject.toml  tmp.py
configs/: config.yaml  default.yaml  joint_sim.yaml  model_comm.yaml  unitree_go2.yaml
configs/backend/: isaac.yaml  mujoco.yaml
configs/backends/: isaac.yaml  mujoco.yaml
configs/envs/: gr00t_map.yaml
configs/objects/: cube.yaml  g1.yaml  sphere.yaml
configs/objects/builtin/: sphere.yaml
configs/objects/robots/unitree/: g1_dex3.yaml
configs/robot/: go2.yaml  h1.yaml
configs/robots/: g1.yaml  gr00t_g1_dex3.yaml  unitree_g1.yaml  unitree_g1_dex3.yaml
docs/: api.md  index.md  model_communication.md  module_structure.md  quickstart.md  unified_backend.md
example/: basic_sim.py  joint_simulation.py  model_client_example.py  scene_builder_demo.py  single_backend.py  unitree_demo.py
examples/: interface.py  unitree_demo.py
examples/elastic/: run_client.py  run_server.py
examples/gr00t/: gr00t.yaml  pick_place.yaml  run_sim.py  run_teleop.py
examples/gr00t/configs/: env.yaml  maps.yaml
examples/gr00t/configs/default/: controller.yaml  modality.yaml  policy.yaml  simulator.yaml  teleop.yaml
examples/gr00t/configs/envs/: default.yaml  gr00t_map.yaml
examples/gr00t/configs/robots/: g1_dex3_gr00t.yaml
examples/gr00t/configs/tasks/: pick_place.yaml  stack_cube.yaml  teleop.yaml
examples/twist2/: run_sim.py  xrobot_teleop_to_robot_w_hand.py
examples/twist2/configs/: default.yaml  g1_dex3_twist2.yaml  simulator.yaml
examples/twist2/data_utils/: episode_writer.py  fps_monitor.py  params.py  rot_utils.py  vision_client.py
presets/: __init__.py
presets/unitree/: __init__.py  go2.py  h1.py
robot_sim/: __init__.py
robot_sim/adapters/gr00t/: __init__.py  config.py  controller.py  datasets.py  env.py  gr00t_env.py  policy.py  utils.py
robot_sim/adapters/gr00t/tasks/: __init__.py  pick_place.py  stack.py  teleop.py
robot_sim/adapters/twist2/: __init__.py  env.py  policy.py  utils.py
robot_sim/backends/: __init__.py  base.py  elastic.py  factory.py  isaac.py  isaacsim.py  manager.py  mujoco.py  types.py  unitree.py
robot_sim/backends/sensors/: __init__.py  base.py  camera.py  contact.py  contact_force.py
robot_sim/bridges/: __init__.py  base.py  mix.py  unitree.py  zmq.py
robot_sim/communication/: __init__.py  client.py  messages.py  protocol.py  server.py
robot_sim/config/: __init__.py  loader.py
robot_sim/configs/: __init__.py  base.py  env.py  object.py  robot.py  scene.py  sensor.py  simulator.py  terrain.py  types.py  visual.py
robot_sim/controllers/: __init__.py  base.py  controller.py  pid.py
robot_sim/envs/: __init__.py  base.py  map_env.py
robot_sim/envs/wrappers/: gr00t.py  map_env.py
robot_sim/protocol/: __init__.py  client.py  messages.py  protocol.py  server.py
robot_sim/protocols/: __init__.py  base.py  client.py  messages.py  unitree.py  zmq.py
robot_sim/scenes/: __init__.py  builder.py
robot_sim/sensors/: __init__.py  base.py
robot_sim/utils/: __init__.py  config.py  constant.py  helper.py  image_server.py  math.py  math_array.py  math_tensor.py
robot_sim/utils/saver/: __init__.py  gym_recorder.py  writers.py
scripts/: image_server.py  read_d435i.py  run_sim.py  run_sim_camera.py  run_sim_threaded.py
tests/: __init__.py  conftest.py  test_backend.py  test_communication.py  test_config.py  test_configs.py  test_presets.py  test_unified_backend.py
