[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robot_sim"
version = "0.1.0"
description = "Unified Robot Simulation Platform for Isaac Lab and MuJoCo"
readme = "README.md"
requires-python = ">=3.10,<=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Yongce Liu", email = "yongce.liu@outlook.com" }]
keywords = ["robotics", "simulation", "isaac-lab", "mujoco", "unitree"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "dacite>=1.9.2",
    "dm-control>=1.0.34",
    "gymnasium>=1.2.2",
    "hydra-core>=1.3.2",
    "loguru>=0.7.3",
    "mujoco>=3.4.0",
    "numpy==1.26.4",
    "onnxruntime>=1.23.2",
    "opencv-python>=4.11.0.86",
    "regex>=2025.11.3",
    "torch==2.7.0",
    "torchvision==0.22.0",
]


[tool.uv]
package = true
python-preference = "managed"
extra-index-url = ["https://pypi.nvidia.com"]

[tool.uv.build-backend]
module-name = "robot_sim"
module-root = ""

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"
addopts = "-s"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint.extend-per-file-ignores]
# Also ignore `E402` in all `__init__.py` files.
"__init__.py" = ["E402", "F401", "F403", "E501"]

[project.optional-dependencies]
dev = ["opencv-python>=4.11.0.86", "pytest>=9.0.2"]
# isaac = ["isaacsim[all,extscache]==5.1.0", "isaaclab[isaacsim,all]==2.3.0"]

[dependency-groups]
dev = ["opencv-python>=4.11.0.86", "pytest>=9.0.2"]
# isaac = ["isaacsim[all,extscache]==5.1.0", "isaaclab[isaacsim,all]==2.3.0"]


# # mypy type checking configuration
# [tool.mypy]
# python_version = "3.11"
# warn_return_any = true
# warn_unused_configs = true
# disallow_untyped_defs = false

# [project.urls]
# Homepage = "https://github.com/yourusername/robot_sim"
# Repository = "https://github.com/yourusername/robot_sim"

# # pytest configuration
# [tool.pytest.ini_options]
# testpaths = ["tests"]
# python_files = ["test_*.py"]
# python_classes = ["Test*"]
# python_functions = ["test_*"]
