[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robot_sim"
version = "0.1.0"
description = "Unified Robot Simulation Platform for Isaac Lab and MuJoCo"
readme = "README.md"
requires-python = ">=3.10,<=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Yongce Liu", email = "yongce.liu@outlook.com" }]
keywords = ["robotics", "simulation", "isaac-lab", "mujoco", "unitree"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "dacite>=1.9.2",
    "dm-control>=1.0.34",
    "gymnasium>=1.2.2",
    "hydra-core>=1.3.2",
    "loguru>=0.7.3",
    "mujoco>=3.4.0",
    "numpy>=1.26.4",
    "regex>=2025.11.3",
]


[tool.uv]
package = true
python-preference = "managed"
extra-index-url = ["https://pypi.nvidia.com"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"
addopts = "-s"

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["third_party"]

[tool.ruff.lint.extend-per-file-ignores]
# Also ignore `E402` in all `__init__.py` files.
"__init__.py" = ["E402", "F401", "F403", "E501"]

# [tool.hatch.metadata]
# allow-direct-references = true

[project.optional-dependencies]
render = ["opencv-python>=4.11.0.86", "imageio[ffmpeg]>=2.37.2"]
teleop = [
    "general-motion-retargeting",
    "xrobotoolkit-sdk",
    "proxsuite==0.7.2",
    "pybind11>=3.0.1",
    "onnxruntime>=1.23.2",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
]
gr00t = ["onnxruntime>=1.23.2", "torch>=2.7.0", "torchvision>=0.22.0"]
# gr00t = ["gr00t @ git+https://github.com/NVIDIA/Isaac-GR00T.git@main"]
# isaac = ["isaacsim[all,extscache]==5.1.0", "isaaclab[isaacsim,all]==2.3.0"]

[dependency-groups]
dev = ["ipykernel>=7.1.0", "mypy>=1.19.1", "pytest>=9.0.2"]

[tool.uv.sources]
general-motion-retargeting = { path = "third_party/teleop/GMR", editable = true }
xrobotoolkit-sdk = { path = "third_party/teleop/XRoboToolkit-PC-Service-Pybind", editable = true }

[tool.mypy]
python_version = "3.11"
strict = false
packages = ["robot_sim"]
pretty = true
show_error_codes = true
show_column_numbers = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
disallow_any_generics = false
# files = ["robot_sim", "tests"]


# [project.urls]
# Homepage = "https://github.com/yourusername/robot_sim"
# Repository = "https://github.com/yourusername/robot_sim"

# # pytest configuration
# [tool.pytest.ini_options]
# testpaths = ["tests"]
# python_files = ["test_*.py"]
# python_classes = ["Test*"]
# python_functions = ["test_*"]
